# TradingBot

./: CMakeLists.txt  README.md
core/: main.cpp  market_data.cpp  strategy_bridge.cpp  trade_executor.cpp
include/: market_data.h  strategy_bridge.h  trade_executor.h
python/: strategy_template.py
